# BqLog

./: .gitignore  CHANGELOG.md  README.md  README_CHS.md
.github/workflows/: build.yml  release.yml  test.yml
demo/: demo_category_log.h
demo/cpp/: demo_category_log.h
demo/csharp/src/bq/: demo_category_log.cs
demo/java/src/bq/: demo_category_log.java
demo/nodejs/: package.json
demo/nodejs/src/: demo_category_log.ts  index.ts
demo/python/: demo_category_log.py  demo_category_main.py  demo_main.py
docs/: ADVANCED_USAGE.md  ADVANCED_USAGE_CHS.md  API_REFERENCE.md  API_REFERENCE_CHS.md  BENCHMARK.md  BENCHMARK_CHS.md  CONFIGURATION.md  CONFIGURATION_CHS.md  ENGINE_INTEGRATION.md  ENGINE_INTEGRATION_CHS.md  INTEGRATION_GUIDE.md  INTEGRATION_GUIDE_CHS.md
include/bq_common/: bq_common_public_include.h
include/bq_common/misc/: assert.h
include/bq_common/platform/: build_type.h  build_type_dynamic_lib_import.h  macros.h
include/bq_common/types/: allocator.h  array.h  array_def.h  array_impl.h  basic_types.h  hash_map.h  hash_map_def.h  hash_map_impl.h  string.h  string_def.h  string_impl.h  string_tools.h  type_tools.h  type_traits.h
include/bq_log/: bq_log.h  bq_log_entry.h
include/bq_log/adapters/: adapter_unreal.h  adapters.h
include/bq_log/misc/: bq_log_api.h  bq_log_def.h  bq_log_impl.h  bq_log_wrapper_tools.h
plugin/unreal/BqLog/: BqLog.uplugin
plugin/unreal/BqLog/Config/: README.txt
plugin/unreal/BqLog/Content/: README.txt
plugin/unreal/BqLog/Source/BqLog/: BqLog.Build.cs
plugin/unreal/BqLog/Source/BqLog/Private/: BqLog.cpp  BqLogFunctionLibrary.cpp  BqLogModule.cpp
plugin/unreal/BqLog/Source/BqLog/Public/: BqLog.h  BqLogFunctionLibrary.h  BqLog_h_ue4.txt  BqLog_h_ue5.txt
plugin/unreal/BqLog/Source/BqLogBPNodes/: BqLogBPNodes.Build.cs
src/: CMakeLists.txt
src/bq_common/: bq_common.h
src/bq_common/encryption/: aes.cpp  aes.h  rsa.cpp  rsa.h  vernam.cpp  vernam.h
src/bq_common/global/: common_vars.cpp  common_vars.h
src/bq_common/platform/: android_misc.cpp  android_misc.h  ios_misc.h  java_misc.cpp  java_misc.h  linux_misc.cpp  linux_misc.h  mac_misc.h  napi_misc.cpp  napi_misc.h  no_lib_cpp_impl.cpp  no_lib_cpp_impl.h  ohos_misc.cpp  ohos_misc.h  platform_misc.cpp  platform_misc.h  posix_misc.cpp  posix_misc.h  ps_misc.cpp  ps_misc.h  python_misc.cpp  python_misc.h  simd.cpp  simd.h  unix_misc.cpp  unix_misc.h  win64_includes_begin.h  win64_misc.cpp  win64_misc.h
src/bq_common/platform/atomic/: _inner_atomic_GNU_C.h  _inner_atomic_msvc.h  atomic.h
src/bq_common/platform/io/: memory_map.h  memory_map_posix.cpp  memory_map_posix.h  memory_map_win.cpp  memory_map_win.h
src/bq_common/platform/thread/: condition_variable.h  condition_variable_posix.cpp  condition_variable_posix.h  condition_variable_win64.cpp  condition_variable_win64.h  mutex.h  mutex_posix.cpp  mutex_posix.h  mutex_win64.cpp  mutex_win64.h  spin_lock.cpp  spin_lock.h  thread.cpp  thread.h  thread_posix.cpp  thread_posix.h  thread_win64.cpp  thread_win64.h
src/bq_common/utils/: aligned_allocator.cpp  aligned_allocator.h  file_manager.cpp  file_manager.h  property.cpp  property.h  property_ex.cpp  property_ex.h  util.cpp  util.h  utility_types.h
src/bq_log/api/: bq_impl_log_invoker.h  bq_log_api.cpp  bq_log_jni_api.cpp  bq_log_jni_api.h  bq_log_napi.cpp  bq_log_napi.h  bq_log_python_api.cpp  bq_log_python_api.h
src/bq_log/global/: log_vars.cpp  log_vars.h  version.cpp  version.h
src/bq_log/log/: layout.cpp  layout.h  log_imp.cpp  log_imp.h  log_level_bitmap.cpp  log_level_bitmap.h  log_manager.cpp  log_manager.h  log_snapshot.cpp  log_snapshot.h  log_types.cpp  log_types.h  log_worker.cpp  log_worker.h
src/bq_log/log/appender/: appender_base.cpp  appender_base.h  appender_console.cpp  appender_console.h  appender_file_base.cpp  appender_file_base.h  appender_file_binary.cpp  appender_file_binary.h  appender_file_compressed.cpp  appender_file_compressed.h  appender_file_raw.cpp  appender_file_raw.h  appender_file_text.cpp  appender_file_text.h
src/bq_log/log/decoder/: appender_decoder_base.cpp  appender_decoder_base.h  appender_decoder_compressed.cpp  appender_decoder_compressed.h  appender_decoder_helper.cpp  appender_decoder_helper.h  appender_decoder_manager.cpp  appender_decoder_manager.h  appender_decoder_raw.cpp  appender_decoder_raw.h
src/bq_log/types/buffer/: block_list.cpp  block_list.h  group_list.cpp  group_list.h  log_buffer.cpp  log_buffer.h  log_buffer_defs.h  memory_pool.h  miso_linked_list.h  miso_ring_buffer.cpp  miso_ring_buffer.h  normal_buffer.cpp  normal_buffer.h  oversize_buffer.cpp  oversize_buffer.h  siso_ring_buffer.cpp  siso_ring_buffer.h
src/bq_log/utils/: log_utils.cpp  log_utils.h  proxy.h  time_zone.cpp  time_zone.h
test/cpp/: test_category_log.h  test_log_3.cpp
test/csharp/src/bq/test/: test_category_log.cs  test_log_category.cs  test_main.cs
test/java/src/bq/test/: test_category_log.java  test_log_category.java  test_main.java
test/python/src/bq/test/: __init__.py  test_base.py  test_category_log.py  test_log_1.py  test_log_2.py  test_log_category.py  test_main.py  test_manager.py  test_result.py
test/typescript/src/bq/test/: test_category_log.ts  test_log_1.ts  test_log_2.ts  test_log_category.ts  test_main_cjs.ts  test_main_esm.ts  test_manager.ts
tools/category_log_generator/: category_generator.cpp
tools/category_log_generator/template/: category_log_template_cpp.cpp  category_log_template_python.cpp  category_log_template_python.h  category_log_template_typescript.cpp  category_log_template_typescript.h
wrapper/java/src/bq/: log.java
wrapper/python/: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
wrapper/python/src/bq/: __init__.py  category_log.py  log.py
wrapper/python/src/bq/defs/: log_category_base.py  log_level.py
wrapper/python/src/bq/impl/: log_invoker.py
wrapper/python/src/bq/tools/: log_decoder.py
wrapper/typescript/: CMakeLists.txt  README.md  README.ohos.md  package.json
(+3 files in other folders)
